<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:text="@string/app_title" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/toggleButton2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:onClick="onToggle1Clicked"
        android:text=""
        android:textOff="OFF"
        android:textOn="ON" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/toggleButton1"
        android:onClick="onToggle2Clicked"
        android:text=""
        android:textOff="OFF"
        android:textOn="ON" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/toggleButton2"
        android:onClick="onToggle3Clicked"
        android:text=""
        android:textOff="OFF"
        android:textOn="ON"
        android:textStyle="normal" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/toggleButton3"
        android:onClick="onToggle4Clicked"
        android:text=""
        android:textOff="OFF"
        android:textOn="ON" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignRight="@+id/seekBar1"
        android:layout_alignTop="@+id/toggleButton1"
        android:layout_toRightOf="@+id/toggleButton1"
        android:text="@string/relay_1"
        android:inputType="textShortMessage"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton2"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignTop="@+id/toggleButton2"
        android:layout_toRightOf="@+id/toggleButton2"
        android:text="@string/relay_2"
        android:inputType="textShortMessage"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignTop="@+id/toggleButton3"
        android:layout_toRightOf="@+id/toggleButton3"
        android:text="@string/night_lamp_1"
        android:inputType="textShortMessage"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/toggleButton3"
        android:text="@string/night_lamp_2"
        android:inputType="textShortMessage"/>

    <EditText
        android:id="@+id/http_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_alignRight="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:onClick="onAddressUrlClicked"
        android:hint="@string/ha_service_http_address"
        android:inputType="textUri"/>

    <EditText
        android:id="@+id/edit_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEditTokenClicked"
        android:hint="@string/ha_service_http_token"
        android:inputType="textUri"
        android:layout_below="@+id/http_address"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_alignRight="@+id/editText4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_token"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/seekBar1"
        android:layout_below="@+id/edit_token"
        android:text="" />


    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton4"
        android:layout_below="@+id/http_address"
        android:max="100"
        android:maxHeight="40dp"
        android:progress="25"
        android:visibility="invisible" />


</RelativeLayout>